--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -15,7 +15,7 @@ jobs:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker Image
-      run: docker build -t xerxist/guacamole:${{ github.run_number }} .
+      run: docker build -t xerxist/guacamole:1.4.${{ github.run_number }} .
     - name: Build Docker Image latest tag
       run: docker build -t xerxist/guacamole:latest .
     - name: Push Image
