--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,8 +1,9 @@
 name: 'Build & Push Docker Image for Guacamole'
 
 on:
-  schedule:
-  - cron: '0 0 * * SUN'
+  push:
+    branches:
+      - '*'
 
 jobs:
   build-and-push:
